# rust-life

./: Cargo.toml  README.md
src/: grid.rs  main.rs
