[package]
name = "rust-life"
version = "0.1.0"
description = "Conway's Game of Life in Rust + ratatui"
authors = ["Tim Raveling <tsraveling@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
